--- a/hmm_viterbi_nechunk.py.ipynb
+++ b/hmm_viterbi_nechunk.py.ipynb
@@ -184,7 +184,7 @@
     "from nltk.sem.relextract import tree2semi_rel, semi_rel2reldict\n",
     "import pandas as pd\n",
     "from datetime import date\n",
-    "document=viterbi(hmm_viterbi(reading_file('/Users/chidam/Desktop/Barcelona.csv')))\n",
+    "document=viterbi(hmm_viterbi(reading_file('path to file')))\n",
     "chunk_result=[]\n",
     "for i in document:\n",
     "    res=nltk.ne_chunk(i)\n",
